[project]
name = "image-reproduce"
version = "0.1.0"
description = "Evaluate image models via an Image -> Text -> Image pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]
